--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-	"website": "http://axemclion.github.io/perfslides"
-}
+{"website":"http://www.nytimes.com/projects/2013/tomato-can-blues/","creator":"http://perfmonkey.com","rand":0.7855914498213679,"created_at":"2014-07-08T23:25:43.431Z"}
