--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"website":"http://www.nytimes.com/projects/2013/tomato-can-blues/","creator":"http://perfmonkey.com","rand":0.7855914498213679,"created_at":"2014-07-08T23:25:43.431Z"}
+{"website":"http://theverge.com","creator":"http://perfmonkey.com","rand":0.815260395174846,"created_at":"2014-07-24T13:39:19.344Z"}
